<resources>
    <string name="app_name">RetrofitHiltDemo07</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Добро пожаловать!"</string>
    <string name="invalid_username">Недопустимое имя пользователя</string>
    <string name="invalid_password">Пароль не менее 5 символов</string>
    <string name="login_failed">"Login failed"</string>
    <string name="next">Next</string>
    <string name="users_list_text">Список зарегистрированных пользователей:</string>
    <string name="second_fragment_label">Second fragment</string>
    <string name="previous">previous</string>
    <string name="action_settings">Settings</string>
    <string name="to_login">Обратно к логину</string>
    <string name="to_list">К списку курсов</string>
    <string name="title">Вход</string>
    <string name="email">Email</string>
    <string name="label">example@gmail.com</string>
    <string name="label_enter">Вход</string>
    <string name="action_0">Нету аккаунта? Регистрация</string>
    <string name="action_1">Забыл пароль</string>
    <string name="password">Пароль</string>
    <string name="enter_password_hint">Введите пароль…</string>
    <string name="search_text">Search courses…</string>
    <string name="sort_text">По дате добавления</string>
    <string name="some_id">22 Сентября 2024</string>
    <string name="star_count">4.9</string>
    <string name="bottom_title">Java-разработчик с нуля</string>
    <string name="description">Освойте backend-разработку  и программирование на Java, фреймворки Spring и Maven, работу с базами данных и API. Создайте свой собственный проект, собрав портфолио и став востребованным специалистом для любой IT компании.</string>
    <string name="price">12 999 ₽</string>
    <string name="button_more_text">Подробнее</string>
    <string name="house_text">Главная</string>
    <string name="favorite_text">Избранное</string>
    <string name="account_text">Аккаунт</string>
    <string name="sum_rub">$s ₽</string>

</resources>