<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    android:background="#151515"
    tools:context=".ui.login.LoginFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="328dp"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/roboto"
        android:gravity="top"
        android:lineSpacingExtra="3sp"
        android:text="@string/title"
        android:textAppearance="@style/title"
        android:translationY="-1.59sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email"
        android:layout_width="41dp"
        android:layout_height="18dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="36dp"
        android:gravity="top"
        android:lineSpacingExtra="-1sp"
        android:text="@string/email"
        android:textAppearance="@style/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/username"
        android:layout_width="328dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="4dp"
        android:autofillHints="@string/label"
        android:background="@drawable/text_fields"
        android:fontFamily="@font/roboto"
        android:textCursorDrawable="@color/white"
        android:hint="@string/label"
        android:inputType="textEmailAddress"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ 0123456789.@"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/label"
        android:textAppearance="@style/label"
        android:textColor="#F2F2F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:text="@string/label" />

    <TextView
        android:id="@+id/password_label"
        android:layout_width="82dp"
        android:layout_height="22dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="4dp"
        android:gravity="top"
        android:lineSpacingExtra="-1sp"
        android:text="@string/password"
        android:textAppearance="@style/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="334dp"
        android:layout_height="62dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_label"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="328dp"
            android:layout_height="50dp"
            android:autofillHints="@string/enter_password_hint"
            android:background="@drawable/text_fields"
            android:fontFamily="@font/roboto"
            android:hint="@string/enter_password_hint"
            android:inputType="textPassword"
            android:textColor="#F2F2F3"
            android:textColorHint="@android:color/white"
            android:textCursorDrawable="@color/white"
            android:textSize="14sp"
            app:hintTextColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="337dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:enabled="false"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="4sp"
        android:text="@string/label_enter"
        android:textAppearance="@style/label_enter"
        app:backgroundTint="#12B956"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <RelativeLayout
        android:id="@+id/actions"
        android:layout_width="367dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login">

        <!--
        Font family: Roboto
        Line height: 15sp
        (identical to box height)
        translationY compensates for the line height adjustment of text
        -->

        <TextView
            android:id="@+id/action_0"
            android:layout_width="267dp"
            android:layout_height="15dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="1sp"
            android:text="@string/action_0"
            android:textAppearance="@style/action_0"
            android:translationY="-0.47sp" />

        <TextView
            android:id="@+id/action_1"
            android:layout_width="167dp"
            android:layout_height="15dp"
            android:layout_below="@id/action_0"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="1sp"
            android:text="@string/action_1"
            android:textAppearance="@style/action_1"
            android:translationY="-0.47sp" />
        <!--
        Font family: Roboto
        Line height: 15sp
        (identical to box height)
        translationY compensates for the line height adjustment of text
        -->
    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="328dp"
        android:layout_height="2dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/divider"
        app:layout_constraintBottom_toTopOf="@+id/social_medi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actions" />

    <RelativeLayout
        android:id="@+id/social_medi"
        android:layout_width="328dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="27dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <RelativeLayout
            android:id="@+id/button_v_k"
            android:layout_width="156dp"
            android:layout_height="40dp"
            android:background="@drawable/button_1">

            <RelativeLayout
                android:id="@+id/icon"
                android:layout_width="27dp"
                android:layout_height="20dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:clipToOutline="true">

                <View
                    android:id="@+id/vector"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="-2dp"
                    android:background="@drawable/vector" />


            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/button_o_k"
            android:layout_width="156dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="7dp"
            android:background="@drawable/button_ok">

            <RelativeLayout
                android:id="@+id/group_11"
                android:layout_width="17dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="73dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="66dp"
                android:layout_marginBottom="0dp">

                <View
                    android:id="@+id/ok_0"
                    android:layout_width="11dp"
                    android:layout_height="11dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="9dp"
                    android:layout_marginEnd="2dp"
                    android:background="@drawable/ok_1" />

                <View
                    android:id="@+id/ok_1"
                    android:layout_width="11dp"
                    android:layout_height="11dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/ok_2" />

            </RelativeLayout>
        </RelativeLayout>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:layout_marginStart="160dp"
        android:layout_marginTop="220dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>