<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/some_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#151515">

    <TextView
        android:id="@+id/title"
        android:layout_width="328dp"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/roboto"
        android:gravity="top"
        android:lineSpacingExtra="3sp"
        android:text="@string/title"
        android:textAppearance="@style/title"
        android:translationY="-1.59sp" />
    <!--
    Font family: Roboto
    Line height: 36sp
    (identical to box height)
    translationY compensates for the line height adjustment of text
    -->

    <RelativeLayout
        android:id="@+id/inputs"
        android:layout_width="328dp"
        android:layout_height="148dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="204dp">

        <RelativeLayout
            android:id="@+id/input_mail"
            android:layout_width="328dp"
            android:layout_height="66dp">

            <!--
            Font family: Roboto
            Line height: 18sp
            (identical to box height)
            -->

            <TextView
                android:id="@+id/email"
                android:layout_width="41dp"
                android:layout_height="18dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="18dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="269dp"
                android:layout_marginBottom="0dp"
                android:gravity="top"
                android:lineSpacingExtra="-1sp"
                android:text="@string/email"
                android:textAppearance="@style/email" />

            <EditText
                android:id="@+id/text_fields"
                android:layout_width="328dp"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="1dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="-1dp"
                android:layout_marginBottom="0dp"
                android:autofillHints="@string/label"
                android:background="@drawable/text_fields"
                android:fontFamily="@font/roboto"
                android:hint="@string/label"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/label"
                android:textAppearance="@style/label"
                android:textColor="#F2F2F3"
                tools:text="@string/label" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/input_password"
            android:layout_width="328dp"
            android:layout_height="66dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="6dp">

            <!--
            Font family: Roboto
            Line height: 18sp
            (identical to box height)
            -->

            <TextView
                android:id="@+id/password_label"
                android:layout_width="82dp"
                android:layout_height="22dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="18dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="228dp"
                android:layout_marginBottom="0dp"
                android:gravity="top"
                android:lineSpacingExtra="-1sp"
                android:text="@string/password"
                android:textAppearance="@style/email" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/button_enter"
        android:layout_width="328dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="376dp"
        android:background="@drawable/button">


        <TextView
            android:id="@+id/label_enter"
            android:layout_width="33dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="156dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="139dp"
            android:layout_marginBottom="11dp"
            android:gravity="center_horizontal|center_vertical"
            android:lineSpacingExtra="4sp"
            android:text="@string/label_enter"
            android:textAppearance="@style/label_enter" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/actions"
        android:layout_width="367dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="432dp">

        <!--
        Font family: Roboto
        Line height: 15sp
        (identical to box height)
        translationY compensates for the line height adjustment of text
        -->

        <TextView
            android:id="@+id/action_0"
            android:layout_width="267dp"
            android:layout_height="15dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="1sp"
            android:text="@string/action_0"
            android:textAppearance="@style/action_0"
            android:translationY="-0.47sp" />

        <TextView
            android:id="@+id/action_1"
            android:layout_width="167dp"
            android:layout_height="15dp"
            android:layout_below="@id/action_0"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="1sp"
            android:text="@string/action_1"
            android:textAppearance="@style/action_1"
            android:translationY="-0.47sp" />
        <!--
        Font family: Roboto
        Line height: 15sp
        (identical to box height)
        translationY compensates for the line height adjustment of text
        -->
    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="328dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="502dp"
        android:background="@drawable/divider"
        />

    <RelativeLayout
        android:id="@+id/social_medi"
        android:layout_width="328dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="73dp"
        android:layout_marginTop="534dp">

        <RelativeLayout
            android:id="@+id/button_1"
            android:layout_width="156dp"
            android:layout_height="40dp"
            android:background="@drawable/button_1">

            <RelativeLayout
                android:id="@+id/icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:clipToOutline="true">

                <View
                    android:id="@+id/vector"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/vector" />


            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/button"
            android:layout_width="156dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="7dp"
            android:background="@drawable/button_ok">

            <RelativeLayout
                android:id="@+id/group_11"
                android:layout_width="15.29dp"
                android:layout_height="15.29dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="74dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="67dp"
                android:layout_marginBottom="0dp">

                <View
                    android:id="@+id/ok_0"
                    android:layout_width="11dp"
                    android:layout_height="11dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="2dp"
                    android:background="@drawable/ok_1" />

                <View
                    android:id="@+id/ok_1"
                    android:layout_width="11dp"
                    android:layout_height="11dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/ok_2" />

            </RelativeLayout>
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>